<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">AussieFishTracker</string>
  <string name="chart_y_title">metres</string>
  <string name="chart_tides_series_title">Tide Cycle</string>
  <string name="current_time_series_title">Now</string>
  <string name="chart_title_date_format">h:mm:ss a, d MMM yyyy</string>
  <string name="chart_time_format">h a</string>
  <string-array name="locations">
    <item>Warneet</item>
    <item>Tooradin</item>
    <item>Frankston</item>
    <item>Mornington</item>
  </string-array>
  <string name="menu_locations">Locations</string>
  <string name="menu_refresh">Refresh</string>
  <string name="menu_add_catch">Add Catch</string>
  <string name="menu_add_catch_short">Add</string>
  <string name="menu_edit_locations">Edit Locations</string>
  <string name="menu_settings">Settings</string>
  <string name="button_new_catch">New</string>
  <string name="button_view_catch_list">View</string>
  <string-array name="species_list">
    <item>Snapper</item>
    <item>Whiting</item>
    <item>Flathead</item>
  </string-array>
  <string name="date_caught_format">d MMM yyyy</string>
  <string name="add_catch_image">Click to add Image</string>
  <string name="add_catch_species_label">Species</string>
  <string name="add_catch_species_hint">Snapper</string>
  <string name="add_catch_weight_label">Weight (kg)</string>
  <string name="add_catch_location_label">Location</string>
  <string name="add_catch_cancel_button">Cancel</string>
  <string name="add_catch_done_button">Done</string>
</resources>
