<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
  android:background="@android:color/white">
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="20dp">
    <RelativeLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
      <ImageView
        android:id="@+id/picture"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/new_catch_image"
        android:layout_centerInParent="true"
        android:contentDescription="@string/add_catch_image"
        android:scaleType="centerCrop"
        android:paddingBottom="20dp"
        android:clickable="true"/>
    </RelativeLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingBottom="20dp">
      <TextView android:textSize="18dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/add_catch_species_label"
                android:paddingRight="10dp"
                android:textStyle="bold"/>
      <AutoCompleteTextView
        android:id="@+id/new_catch_species"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_catch_species_hint"
        android:inputType="text"
        android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingBottom="20dp">
      <TextView android:textSize="18dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/add_catch_weight_label"
                android:paddingRight="10dp"
                android:textStyle="bold"/>
      <EditText
        android:id="@+id/new_catch_weight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textColor="@android:color/black"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:paddingBottom="20dp">
      <TextView android:textSize="18dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/add_catch_location_label"
                android:paddingRight="10dp"
                android:textStyle="bold"/>
      <EditText
        android:id="@+id/new_catch_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@android:color/black"/>
    </LinearLayout>
  </LinearLayout>
</ScrollView>